# idocument_recognition

./: .gitignore  README.md  TRANSFER_VIA_SSH.md  pyproject.toml
artifacts/source_validation/: source_pdf_report.csv  source_pdf_summary.txt
data/Pdf/: README.txt  lcwa_gov_pdf_metadata.csv
data/pdfa-eng-train-0000/: 0009795.json  0017137.json  0022454.json  0034384.json  0044451.json  0049038.json  0062612.json  0064319.json  0066196.json  0069997.json  0081191.json  0081994.json  0084384.json  0090578.json  0101299.json  0111315.json  0116458.json  0120666.json  0134647.json  0134840.json  0137095.json  0141528.json  0147189.json  0148940.json  0157497.json  0166948.json  0181112.json  0182448.json  0198877.json  0206032.json  0222465.json  0230935.json  0239796.json  0247582.json  0248379.json  0263964.json  0281999.json  0299923.json  0300777.json  0306351.json  (+1153 more)
data/synthetic/: page_labels.csv  page_labels_eval.csv  page_labels_train.csv  pair_labels.csv  pair_labels_eval.csv  pair_labels_train.csv
scripts/: check_gpu.py  install_prereqs.sh
src/document_recognition/: __init__.py  cli.py  dataset.py  dataset_split.py  inference.py  labels.py  lightweight_pairwise.py  mupdf_warnings.py  ocr.py  pairwise_dataset.py  pairwise_inference.py  pairwise_model.py  pairwise_train.py  pdf.py  postprocess.py  source_validation.py  synthetic.py  train.py  training_control.py  ui.py
